Added quit API
